--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 
 [dependencies]
 simple-websockets = "0.1.5"
+sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-rustls"] }
+tokio = { version = "1.27.0", features = ["full"] }
